Fixed responsiveness, card wrapping

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -9,7 +9,47 @@ body {
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+h1 {
+	font-family: inherit;
+	font-style: inherit;
+	font-weight: 700;
+	font-size: 64px;
+	line-height: 72px;
+}
+
+h2 {
+	font-family: inherit;
+	font-style: inherit;
+	font-weight: 700;
+	font-size: 56px;
+	line-height: 64px;
+}
+
+h3 {
+	font-family: inherit;
+	font-style: inherit;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 32px;
+}
+
+h4 {
+	font-family: inherit;
+	font-style: inherit;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 28px;
+}
+
+p {
+	font-family: inherit;
+	font-style: inherit;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 24px;
 }
 
 a {
